--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <nav>
         <div class="navbrand">
-          <img src="brand.png" alt="logo" />
+          <img src="brand1.png" alt="logo" />
         </div>
         <ul>
           <li><a href="">Portfolio</a></li>
@@ -33,8 +33,9 @@
           <h3 class="banner-greeting">Hi,I am</h3>
           <h1 class="banner-title">Mobarok Ali</h1>
           <p class="banner-desc">
-            Shot what able cold new see hold.Friendly as an<br> betrayed formerly
-            he. Morning because as<br> to society behaved moments.
+            Shot what able cold new see hold.Friendly as an<br />
+            betrayed formerly he. Morning because as<br />
+            to society behaved moments.
           </p>
           <button class="btn-primary">
             <i class="fa-solid fa-download"></i>Download CV
@@ -47,161 +48,206 @@
       </div>
     </header>
     <main>
-     <section class="about">
-         <h3 class="section-title">About Me</h3>
-         <p class="section-description">
-             I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
-             websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
-             while working with me. Delivering work within time and budget which meets clients requirements in our
-             mata.
-         </p>
-         <div class="about-info-container">
-             <!-- .about-info*4>h4.info-title+p.info-description -->
-             <div class="about-info">
-                 <h4 class="info-title">Name:</h4>
-                 <p class="info-description">Mobarok Ali </p>
-             </div>
-             <div class="about-info">
-                 <h4 class="info-title">Email:</h4>
-                 <p class="info-description">mali201300@bscse.uiu.ac.bd</p>
-             </div>
-             <div class="about-info">
-                 <h4 class="info-title">Date of birth:</h4>
-                 <p class="info-description">02 November 2001</p>
-             </div>
-             <div class="about-info">
-                 <h4 class="info-title">From:</h4>
-                 <p class="info-description">Dhaka, Bangladesh</p>
-             </div>
-         </div>
-     </section>
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-info-container">
+          <!-- .about-info*4>h4.info-title+p.info-description -->
+          <div class="about-info">
+            <h4 class="info-title">Name:</h4>
+            <p class="info-description">Mobarok Ali</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Email:</h4>
+            <p class="info-description">mali201300@bscse.uiu.ac.bd</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Date of birth:</h4>
+            <p class="info-description">02 November 2001</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">From:</h4>
+            <p class="info-description">Dhaka, Bangladesh</p>
+          </div>
+        </div>
+      </section>
 
-     <!-- what i do section start -->
-     <section>
-         <h3 class="section-title">What I do</h3>
-         <p id="what-i-do-description" class="section-description">
-             I have more than 10 years experience building software for clients all over the world. Below is a quick
-             overview of my main technical skill sets and technologies i use. Want to find out more about my
-             experience? Check out my online resume and project portfolio.
-         </p>
-         <div class="skills-container">
-             <!-- .skill*4>img+h3.skill-title+p.skill-description -->
-             <div class="skill">
-               <i class="fa-brands fa-js"></i>
-                 <h3 class="skill-title">Vanilla JavaScript</h3>
-                 <p class="skill-description">List skill/technologies here. You can change the icon above to any of
-                     the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-             </div>
-             <div class="skill">
-               <i class="fa-brands fa-react"></i>
-                 <h3 class="skill-title">React</h3>
-                 <p class="skill-description">List skill/technologies here. You can change the icon above to any of
-                     the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-             </div>
-             <div class="skill">
-                 <i class="fa-brands fa-node"></i>
-                 <h3 class="skill-title">Node.js</h3>
-                 <p class="skill-description">List skill/technologies here. You can change the icon above to any of
-                     the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-             </div>
-             <div class="skill">
-               <i class="fa-solid fa-leaf"></i>
-                 <h3 class="skill-title">MongoDB</h3>
-                 <p class="skill-description">List skill/technologies here. You can change the icon above to any of
-                     the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-             </div>
-         </div>
-     </section>
-     <!-- Resume Section -->
-     <section>
-         <h3 class="section-title">A summary of My Resume</h3>
+      <!-- what i do section start -->
+      <section>
+        <h3 class="section-title">What I do</h3>
+        <p id="what-i-do-description" class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skills-container">
+          <!-- .skill*4>img+h3.skill-title+p.skill-description -->
+          <div class="skill">
+            <i class="fa-brands fa-js"></i>
+            <h3 class="skill-title">Vanilla JavaScript</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <i class="fa-brands fa-react"></i>
+            <h3 class="skill-title">React</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <i class="fa-brands fa-node"></i>
+            <h3 class="skill-title">Node.js</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <i class="fa-solid fa-leaf"></i>
+            <h3 class="skill-title">MongoDB</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Resume Section -->
+      <section>
+        <h3 class="section-title">A summary of My Resume</h3>
 
-         <div class="resume-container">
-             <!-- .resume-column*2>h3.resume-column-title -->
-             <div class="resume-column">
-                 <h3 class="resume-column-title">My Education</h3>
+        <div class="resume-container">
+          <!-- .resume-column*2>h3.resume-column-title -->
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
 
-                 <div class="resume-item">
-                     <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                     <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                     <p class="resume-item-description">List skill/technologies here. You can change the icon above
-                         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                     </p>
-                 </div>
-                 <hr>
-                 <div class="resume-item">
-                     <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                     <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                     <p class="resume-item-description">List skill/technologies here. You can change the icon above
-                         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                     </p>
-                 </div>
-                 <hr>
-                 <div class="resume-item">
-                     <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                     <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                     <p class="resume-item-description">List skill/technologies here. You can change the icon above
-                         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                     </p>
-                 </div>
-                 
-
-             </div>
-             <div class="resume-column">
-                 <h3 class="resume-column-title">My Experience</h3>
-                 <div class="resume-item">
-                     <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                     <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                     <p class="resume-item-description">List skill/technologies here. You can change the icon above
-                         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                     </p>
-                 </div>
-                 <hr>
-                 <div class="resume-item">
-                     <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                     <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                     <p class="resume-item-description">List skill/technologies here. You can change the icon above
-                         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                     </p>
-                 </div>
-                 <hr>
-                 <div class="resume-item">
-                     <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                     <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                     <p class="resume-item-description">List skill/technologies here. You can change the icon above
-                         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                     </p>
-                 </div>
-             </div>
-         </div>
-         <div class="download-cv">
-             <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
-         </div>
-     </section>
- </main>
- <!-- footer  -->
- <footer>
-     <div class="footer-column">
-         <h3 class="section-title">Lets Connect</h3>
-         <p class="section-description">
-             Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
-         </p>
-         <div class="social-links">
-             <a href=""><i class="fa-brands fa-facebook"></i></a>
-             <a href=""><i class="fa-brands fa-twitter"></i></a>
-             <a href=""><i class="fa-brands fa-instagram"></i></a>
-             <a href=""><i class="fa-brands fa-linkedin"></i></a>
-         </div>
-     </div>
-     <div class="footer-column">
-         <h3 class="section-title">Let’s Message me. Right Now.</h3>
-         <form class="contact" action="">
-             <input type="text" placeholder="Your Name">
-             <input type="email" name="" placeholder="Your Email" id="">
-             <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
-             <input class="btn-primary" type="submit" value="Submit">
-         </form>
-     </div>
- </footer>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Experience</h3>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="download-cv">
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
+        </div>
+      </section>
+    </main>
+    <!-- footer  -->
+    <footer>
+      <div class="footer-column">
+        <h3 class="section-title">Lets Connect</h3>
+        <p class="section-description">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="social-links">
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h3 class="section-title">Let’s Message me. Right Now.</h3>
+        <form class="contact" action="">
+          <input type="text" placeholder="Your Name" />
+          <input type="email" name="" placeholder="Your Email" id="" />
+          <textarea
+            name=""
+            placeholder="Message"
+            id=""
+            cols="30"
+            rows="10"
+          ></textarea>
+          <input class="btn-primary" type="submit" value="Submit" />
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
